test/types/scalar/bradc/bitNegateBoolParam.dyno.good
bitNegateBoolParam.chpl:4: error: ~ is not supported on operands of boolean type
bitNegateBoolParam.chpl:5: error: ~ is not supported on operands of boolean type
